2006-02-18  Mark Wielaard  <mark@klomp.org>

	* javax/swing/AbstractAction.java (AbstractAction()): Nothing to do.
	(AbstractAction(String)): Just call putValue() for NAME.
	(putValue): Nothing to do is old and new value are both null.

2006-02-18  Mark Wielaard  <mark@klomp.org>

	* javax/swing/JRootPane.java (layoutContainer): Get contentPane
	through getContentPane().
	(preferredLayoutSize): Likewise.

2006-02-18  Mark Wielaard  <mark@klomp.org>

	* javax/swing/JMenuBar.java (paintBorder): Check whether border is
	actually set before painting.

2006-02-18  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/HTMLDocument.java (addContent):
	Fully qualify AbstractDocument.AttributeContext and
	DefaultStyledDocument.ElementSpec.ContentType for gcj 4.0.

2006-02-18  Mark Wielaard  <mark@klomp.org>

	* java/awt/datatransfer/DataFlavor.java (tryToLoadClass): Rewritten.
	(getRepresentationClassFromMime): Add exception cause to
	IllegalArgumentException.

2006-02-17  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java:
	Removed unneeded import.
	* gnu/java/awt/peer/gtk/GtkFramePeer.java:
	Removed unneeded imports.
	* java/awt/BorderLayout.java:
	Fixed comment, this is not yet handled in the JDK 1.5.
	* java/awt/Container.java:
	Removed unneeded import.

2006-02-17  Lillian Angel  <langel@redhat.com>

	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	(setBounds): Removed check. Coordinates should always be changed
	to incorporate the parent's coordinates.
	* gnu/java/awt/peer/gtk/GtkFramePeer.java
	(setMenuBar): Added checks. Don't validate component if it has 
	not been validated yet, it will be validated later. Only validate
	if it has already been validated, in that case it needs to be
	revalidated.
	* java/awt/Window.java
	(show): Added check. If the window is visible, then bring it to the
	front. Otherwise, iterate through all its children windows and show them.
	No need to do both.

2006-02-17  Roman Kennke  <kennke@aicas.com>
